--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>فن العمارة: بدر الجمال والتاريخ</h1>
+        <h1>فن العمارة: الجمال والتاريخ</h1>
     </header>
     <nav>
         <a href="#moroccan">المعمار المغربي التقليدي</a>
