--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 فن العمارة</p>
+        <p>&copy; فن العمارة 2025 بدر</p>
     </footer>
 </body>
 </html>
