--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
     <section id="moroccan">
         <h2>المعمار المغربي التقليدي</h2>
         <p>يتميز المعمار المغربي بتنوعه الغني، حيث يجمع بين الفسيفساء (الزليج)، والأقواس المزخرفة، والتصاميم الهندسية المعقدة. من أبرز المعالم: قصر آيت بن حدو، والرياضات التقليدية التي تظهر جمال الزخارف.</p>
-        <img class="image" src="Photos/1.jpg" alt="قصر آيت بن حدو">
+        <img class="c-image" src="Photos/1.jpg" alt="قصر آيت بن حدو">
     </section>
 
     <section id="andalusian">
         <h2>المعمار الأندلسي</h2>
         <p>تأثر العالم الإسلامي وأوروبا بالمعمار الأندلسي، حيث يظهر ذلك في قصر الحمراء بغرناطة وجامع قرطبة. يتميز بالحدائق الجميلة والأقواس الفريدة.</p>
-        <img class="image" src="Photos/2.jpeg" alt="قصر الحمراء">
+        <img class="c-image" src="Photos/2.jpeg" alt="قصر الحمراء">
     </section>
 
     <section id="modern">
         <h2>المعمار الحديث في العالم العربي</h2>
         <p>تجمع المدن العربية الحديثة بين العمارة التقليدية والتكنولوجيا الحديثة، مثل برج خليفة في دبي ومسجد الحسن الثاني في الدار البيضاء.</p>
-        <img class="image" src="Photos/3.jpeg" alt="برج خليفة">
+        <img class="a-image" src="Photos/3.jpeg" alt="برج خليفة">
     </section>
 
     <section id="environment">
