--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </section>
 
     <footer>
-        <p>&copy; فن العمارة 2025 بدر</p>
+        <p>بدر © فن العمارة 2025</p>
     </footer>
 </body>
 </html>
