--- a/index.html
+++ b/index.html
@@ -23,10 +23,16 @@
         <img class="c-image" src="Photos/2.jpeg" alt="قصر الحمراء">
     </section>
 
-    <section id="modern">
-        <h2>المعمار الحديث في العالم العربي</h2>
+    <section id="roma">
+        <h2>المعمار الروماني</h2>
         <p>تجمع المدن العربية الحديثة بين العمارة التقليدية والتكنولوجيا الحديثة، مثل برج خليفة في دبي ومسجد الحسن الثاني في الدار البيضاء.</p>
         <img class="a-image" src="Photos/3.jpeg" alt="برج خليفة">
+    </section>
+    
+    <section id="modern">
+        <h2>المعمار الحديث في العالم العربي</h2>
+        <p>كانت العمارة الرومانية مستوحاة بشكل كبير من العمارة اليونانية والإتروسكان. استعار الرومان العديد من التقنيات المعمارية ، بما في ذلك الأقواس ، واستخدام المكونات الهيدروليكية ، وبناء الأقواس. استند معظم العمارة في روما القديمة إلى الأوامر الكلاسيكية القديمة من الفترة اليونانية.</p>
+        <img class="" src="" alt="">
     </section>
 
     <section id="environment">
@@ -37,16 +43,19 @@
     <section id="islamic">
         <h2>المعمار الإسلامي: جماليات وأسرار</h2>
         <p>يعكس المعمار الإسلامي التوازن والرمزية من خلال استخدام الزخارف الهندسية المتناظرة والمساجد ذات القباب العالية.</p>
+        <img class="" src="" alt="">
     </section>
 
     <section id="techniques">
         <h2>التقنيات التقليدية في البناء</h2>
         <p>كانت التقنيات التقليدية في بناء القرى والأسوار فعّالة وصديقة للبيئة، حيث استخدمت مواد محلية وتقنيات متينة.</p>
+        <img class="" src="" alt="">
     </section>
 
     <section id="ancient">
         <h2>المدن العتيقة في المغرب</h2>
         <p>تُظهر مدن مثل فاس ومراكش الطابع المعماري التقليدي الذي صمد أمام الزمن، حيث تتسم الأزقة الضيقة والأسواق بطابعها الخاص.</p>
+        <img class="" src="" alt="">
     </section>
 
     <footer>
