--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 
     <section id="roma">
         <h2>المعمار الروماني</h2>
-        <p>تجمع المدن العربية الحديثة بين العمارة التقليدية والتكنولوجيا الحديثة، مثل برج خليفة في دبي ومسجد الحسن الثاني في الدار البيضاء.</p>
-        <img class="a-image" src="Photos/3.jpeg" alt="برج خليفة">
+        <p>كانت العمارة الرومانية مستوحاة بشكل كبير من العمارة اليونانية والإتروسكان. استعار الرومان العديد من التقنيات المعمارية ، بما في ذلك الأقواس ، واستخدام المكونات الهيدروليكية ، وبناء الأقواس. استند معظم العمارة في روما القديمة إلى الأوامر الكلاسيكية القديمة من الفترة اليونانية.</p>
+        <img class="a-image" src="Photos/4.jpeg" alt="معمار روما">
     </section>
     
     <section id="modern">
         <h2>المعمار الحديث في العالم العربي</h2>
-        <p>كانت العمارة الرومانية مستوحاة بشكل كبير من العمارة اليونانية والإتروسكان. استعار الرومان العديد من التقنيات المعمارية ، بما في ذلك الأقواس ، واستخدام المكونات الهيدروليكية ، وبناء الأقواس. استند معظم العمارة في روما القديمة إلى الأوامر الكلاسيكية القديمة من الفترة اليونانية.</p>
-        <img class="" src="" alt="">
+        <p>تجمع المدن العربية الحديثة بين العمارة التقليدية والتكنولوجيا الحديثة، مثل برج خليفة في دبي ومسجد الحسن الثاني في الدار البيضاء.</p>
+        <img class="a-image" src="Photos/3.jpeg" alt="برج خليفة">
     </section>
 
     <section id="environment">
