--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link data-default-icon="https://th.bing.com/th/id/OIP.47OukHr_4FoeO5_Khn2VawAAAA?rs=1&pid=ImgDetMain" rel="icon" sizes="192x192" href="https://th.bing.com/th/id/OIP.47OukHr_4FoeO5_Khn2VawAAAA?rs=1&pid=ImgDetMain">
     <title>العمارة والفنون</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -26,7 +27,7 @@
     <section id="roma">
         <h2>المعمار الروماني</h2>
         <p>كانت العمارة الرومانية مستوحاة بشكل كبير من العمارة اليونانية والإتروسكان. استعار الرومان العديد من التقنيات المعمارية ، بما في ذلك الأقواس ، واستخدام المكونات الهيدروليكية ، وبناء الأقواس. استند معظم العمارة في روما القديمة إلى الأوامر الكلاسيكية القديمة من الفترة اليونانية.</p>
-        <img class="a-image" src="Photos/4.jpeg" alt="معمار روما">
+        <img class="a-image" src="Photos/4.jpg" alt="معمار روما">
     </section>
     
     <section id="modern">
