--- a/index.html
+++ b/index.html
@@ -12,16 +12,27 @@
         <h1>فن العمارة: الجمال والتاريخ</h1>
     </header>
 
-    <section id="moroccan">
-        <h2>المعمار المغربي التقليدي</h2>
-        <p>يتميز المعمار المغربي بتنوعه الغني، حيث يجمع بين الفسيفساء (الزليج)، والأقواس المزخرفة، والتصاميم الهندسية المعقدة. من أبرز المعالم: قصر آيت بن حدو، والرياضات التقليدية التي تظهر جمال الزخارف.</p>
-        <img class="c-image" src="Photos/1.jpg" alt="قصر آيت بن حدو">
+    <section id="inroduction">
+        <h2>مقدمة</h2>
+        <p>لطالما كانت العمارة مرآة تعكس ثقافة الشعوب وتاريخها، حيث تحمل بين جدرانها أسرار الحضارات وابتكارات الأجيال. فمنذ أقدم العصور، اعتمد الإنسان على البناء كوسيلة للحماية والتعبير عن هويته، مما أدى إلى ظهور مدارس معمارية متنوعة، امتزجت فيها التقاليد المحلية بالتطورات الهندسية والفنية.</p>
+        <p>يُعرّف مفهوم الفن المعماري بأنّه الفنّ الذي يهتمّ بتكوين وإنشاء الحجوم وأيضاً الفراغات التي تُخصّص من أجل احتضان الوظائف والنشاطات الإنسانيّة وأيضاً الاجتماعيّة على مختلف أصنافها وأنواعها، وبذلك فإنّ مفهوم هذا الفنّ هو انعكاس لأشكال وسمات الإنجازات أكانت ماديّة أم حضاريّة.</p>
+        <p>في المغرب، تشهد المعالم الأثرية على غنى العمارة التقليدية التي تمتزج فيها الزخارف الهندسية بأساليب البناء المتوارثة، في حين يتجلى التأثير الأندلسي في تفاصيل القصور والمساجد التي ما زالت تحكي قصص حضارات عريقة. وعلى الجانب الآخر، لا يمكن إغفال تأثير العمارة الرومانية التي تركت بصمتها في شمال إفريقيا وأوروبا، حيث تميزت بأقواسها الضخمة، ومدرجاتها الهائلة، وهندستها المتقنة التي ما زالت شاهدة على عظمة هذه الحضارة.</p>
+        <p>ومع دخول العالم العربي إلى عصر الحداثة، أصبحت المدن تنبض بناطحات السحاب والمباني الذكية التي تحاول الجمع بين الأصالة والتطور.</p>
+        <p>في هذا المقال، سنأخذك في جولة عبر أروع المعالم والأنماط المعمارية، لنكتشف معًا كيف شكلت الهندسة المعمارية عالمنا عبر العصور.</p>
     </section>
 
     <section id="andalusian">
         <h2>المعمار الأندلسي</h2>
         <p>تأثر العالم الإسلامي وأوروبا بالمعمار الأندلسي، حيث يظهر ذلك في قصر الحمراء بغرناطة وجامع قرطبة. يتميز بالحدائق الجميلة والأقواس الفريدة.</p>
+        <p>تطورت الهندسة والعمارة في الأندلس بصورة كبيرة، ويرجع الفضل في هذا للعديد من العلماء الذين عاشوا آنذلك، على رأسهم العالم أبو بكر الكرجي، وهو عالم رياضيات كبير، وقد طور الكرجي العديد من التطبيقات المختلفة في مجال الهندسة، لا سيما في مجال الهندسة المعمارية، التي كان لها دور كبير في بناء المساجد والمدارس والقصور هناك،[٢] ويمكن توضيح أهم معالم فن العمارة والهندسة في الأندلس فيما يأتي:</p>
+        <p><h5>جامع قرطبة الكبير</h5></p>يعد جامع قرطبة الكبير أحد أقدم المباني في الأندلس، وهو من أكثر الأبنية التي تدل على عظمة العمارة الأندلسية، ويحتوي هذا المسجد على العديد من التقنيات المعمارية والزخارف الإسلامية المبتكرة
         <img class="c-image" src="Photos/2.jpeg" alt="قصر الحمراء">
+    </section>
+    
+    <section id="moroccan">
+        <h2>المعمار المغربي التقليدي</h2>
+        <p>يتميز المعمار المغربي بتنوعه الغني، حيث يجمع بين الفسيفساء (الزليج)، والأقواس المزخرفة، والتصاميم الهندسية المعقدة. من أبرز المعالم: قصر آيت بن حدو، والرياضات التقليدية التي تظهر جمال الزخارف.</p>
+        <img class="c-image" src="Photos/1.jpg" alt="قصر آيت بن حدو">
     </section>
 
     <section id="roma">
