--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2>المعمار الأندلسي</h2>
         <p>تأثر العالم الإسلامي وأوروبا بالمعمار الأندلسي، حيث يظهر ذلك في قصر الحمراء بغرناطة وجامع قرطبة. يتميز بالحدائق الجميلة والأقواس الفريدة.</p>
         <p>تطورت الهندسة والعمارة في الأندلس بصورة كبيرة، ويرجع الفضل في هذا للعديد من العلماء الذين عاشوا آنذلك، على رأسهم العالم أبو بكر الكرجي، وهو عالم رياضيات كبير، وقد طور الكرجي العديد من التطبيقات المختلفة في مجال الهندسة، لا سيما في مجال الهندسة المعمارية، التي كان لها دور كبير في بناء المساجد والمدارس والقصور هناك،[٢] ويمكن توضيح أهم معالم فن العمارة والهندسة في الأندلس فيما يأتي:</p>
-        <p><h3>جامع قرطبة الكبير: </h3>يعد جامع قرطبة الكبير أحد أقدم المباني في الأندلس، وهو من أكثر الأبنية التي تدل على عظمة العمارة الأندلسية، ويحتوي هذا المسجد على العديد من التقنيات المعمارية والزخارف الإسلامية المبتكرة</p>
+        <p><h3>جامع قرطبة الكبير: </h3></p> يعد جامع قرطبة الكبير أحد أقدم المباني في الأندلس، وهو من أكثر الأبنية التي تدل على عظمة العمارة الأندلسية، ويحتوي هذا المسجد على العديد من التقنيات المعمارية والزخارف الإسلامية المبتكرة
         <img class="c-image" src="Photos/2.jpeg" alt="قصر الحمراء">
     </section>
     
